# android-tv-connect

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
android_tv_connect/: __init__.py  __main__.py  about.py  adb_client.py  adb_discovery.py  adb_settings.py  audio_source_test.py  branding.py  capture.py  capture_device.py  chrome.py  config.py  connection_ui.py  control_bar.py  diagnostics_server.py  geometry.py  input_controller.py  input_map.py  media_enumeration.py  mpris_controller.py  pip_window.py  scrcpy_manager.py  settings_apply.py  settings_dialog.py  settings_draft.py  settings_presets.py  settings_store.py  shortcuts.py  singleton.py  update_ui.py  window.py
android_tv_connect_launcher/: __init__.py  __main__.py  constants.py  installer.py  manifest.py  paths.py  settings.py  updater.py  version.py
docs/: SCRCPY.md  SEAMLESS-UX.md  UPDATES.md
packaging/: android-tv-connect.desktop
release/: RELEASE_NOTES-1.1.0.txt  RELEASE_NOTES-1.1.10.txt  RELEASE_NOTES-1.1.11.txt  RELEASE_NOTES-1.1.12.txt  RELEASE_NOTES-1.1.13.txt  RELEASE_NOTES-1.1.2.txt  RELEASE_NOTES-1.1.3.txt  RELEASE_NOTES-1.1.4.txt  RELEASE_NOTES-1.1.5.txt  RELEASE_NOTES-1.1.6.txt  RELEASE_NOTES-1.1.7.txt  RELEASE_NOTES-1.1.8.txt  RELEASE_NOTES-1.1.9.txt  update-manifest.example.json
scripts/: atv-diag.py  audio-source-probe.py  audio-source-test-interactive.py  audio-source-test-stop.py  build-release.sh  install-local.sh
tests/: field_test.py  headless_capture_test.py  live_adb_reboot_test.py  test_adb_discovery.py  test_adb_reconnect.py  test_scrcpy.py  (+15 more)
(+11 files in other folders)
